16_subseq/grade.txt
Grading at Fri Sep 21 05:48:28 UTC 2018
Attempting to compile maxSeq.c 
maxSeq.c: In function ‘maxSeq’:
maxSeq.c:8:3: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   if (n=0) {
   ^
maxSeq.c:11:3: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   else if (n=1) {
   ^
maxSeq.c:17:8: error: ‘j’ undeclared (first use in this function)
   for (j=1; j<n; j++){
        ^
maxSeq.c:17:8: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
